[COLAB-2761] Fix table alignment on members page

--- a/view/src/main/resources/static/sass/partials/layout/_l-Content.scss
+++ b/view/src/main/resources/static/sass/partials/layout/_l-Content.scss
@@ -46,6 +46,10 @@ $_l-Content__gutter: $t-Spacing__gridGutter;
     flex-basis: 250px;
   }
 
+  .l-Content__sidebar--smallest {
+    flex-basis: 200px;
+  }
+
   .l-Content__sidebar--large {
     flex-basis: 350px;
   }
